k8s/apps/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: it-tools-deployment
  labels: 
    app: it-tools
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: it-tools 
  template: 
    metadata: 
      labels: 
        app: it-tools 
    spec: 
      containers: 
      - name: it-tools 
        image: 530193444530.dkr.ecr.eu-central-1.amazonaws.com/eks-gitops-platform/it-tools:f4d201777aba5c60e4aae5f759a0fc6dc040bec8
      ports: 
      - containerPort: 80
