k8s/apps/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools-svc
spec:
  type: ClusterIP
  selector:
    app: it-tools
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
